# airas-20251112-113941-matsuzawa

./: pyproject.toml
.github/actions/retry-claude/: action.yml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-1-iter1-Qwen3-0.6B-gsm8k.yaml  proposed-iter1-Qwen3-0.6B-gsm8k.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
