[project]
name = "hifi_saco_exp"
version = "0.1.0"
requires-python = ">=3.10"

[project.dependencies]
hydra-core = "^1.3"
wandb = "^0.16"
torch = "^2.1"
transformers = "^4.36"
peft = "^0.7"
bitsandbytes = "^0.43"
datasets = "^2.15"
optuna = "^3.4"
seaborn = "^0.13"
matplotlib = "^3.8"
PyYAML = "^6.0"
pandas = "^2.1"
scikit-learn = "^1.3"
scipy = "^1.11"